--- a/package.json
+++ b/package.json
@@ -11,21 +11,27 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@types/lodash": "^4.14.195",
     "@types/node": "20.2.5",
+    "@types/ramda": "^0.29.3",
     "@types/react": "18.2.9",
+    "@types/react-date-range": "^1.4.4",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "date-fns": "^2.30.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "faker": "^5.5.3",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "ramda": "^0.29.0",
     "react": "18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
+    "react-tippy": "^1.4.0",
     "sass": "^1.63.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
